2007-01-30  Ross Burton <ross@burtonini.com>

	* rsvg-cairo-draw.c: Bug 402246 - Rsvg was leaking Pango contexts,
	layouts, and GList nodes.
	* rsvg-text.c: Ditto
	
2007-01-29  Dom Lachowicz <domlachowicz@gmail.com>

	* test-display.c: 402107 . rsvg_convert and rsvg_viiew crash if called without arguments
	* rsvg-convert.c: ditto
	
2007-01-27  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Regression test suite (use make check).

	* tests/rsvg-test.c: new.
	* tests/rsvg-test.txt: new. Contains the list of test files.
	* tests/bugs: directory for bug test files.
	* tests/samples: directory for random test files.
	* tests/svg1.2: directory for SVG 1.2 feature test files.

2007-01-27  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	* rvsg-cairo-draw.c (_rsvg_cairo_set_operator): add support for 'plus'
	comp-op.
	* rsvg-styles.c (rsvg_parse_style_arg): ditto.
	* rsvg-styles.h: ditto.
	
2007-01-25  Kouhei Sutou <kou@cozmixng.org>

	* rsvg-cairo-clip.c: Fix clipping regression introduced by the 
	2006-10-13 patch (bug 388545)
	
2007-01-13  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix Emacs modeline. Tab is 8 characters.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Fix indentation of *.h files. Running indent on them was not a good
	idea. Also add sts setting to vim modeline.

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Indentation fix, using: indent -kr -nut -pcs -psl -i4 -l100

2007-01-12  Emmanuel Pacaud <emmanuel.pacaud@lapp.in2p3.fr>

	Add support for porterduff comp-op operators and for enable-background.

	* rsvg-cairo-draw.c (_rsvg_cairo_set_operator): new.
	(rsvg_cairo_render_path): request a temporary buffer when operator is
	not src-over.
	(rsvg_cairo_render_image): set composite operator before painting.
	(rsvg_cairo_push_render_stack): don't exit for operator != src-over
	or enable-background != accumulate.
	(rsvg_cairo_pop_render_stack): ditto. Set composite operator.